tests/errors/exportOnExtern.milo
// @error: nothing here to export
@export
extern fn getpid(): i32

fn main() {
    let _p = getpid()
}
